--- a/css/origin.css
+++ b/css/origin.css
@@ -41,7 +41,7 @@
   --button-hover-background-color: #444444;
 
   --now-playing-page-background-color: #333333;
-  --now-playing-close-icon-color: #555555;
+  --now-playing-close-icon-color: #b3b3b3;
 
   --disable-song-title-color: #b7b7b7;
   --windows-border-color: #333333;
